Bug 89784: ``xlib 0.9.2 will not display to m64(8+24bit)/Expert3D/Creator3D framebuffers because of visuals/depths'', author=Roland Mainz <Roland.Mainz@informatik.med.uni-giessen.de>, r=Caspian Maclean <caspian.maclean@tuxia.com>, sr=jst